# looma-notetaker

./: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  DECISIONS.md  README.md  package-lock.json  package.json
.github/workflows/: build-whisper-sidecar.yml  ci.yml  release.yml  stats.yml
.playwright-mcp/: page-2026-07-01T23-26-48-312Z.yml
crates/fly-asr/: Cargo.toml
crates/fly-asr/src/: checkpoint.rs  groq.rs  lib.rs  retry.rs  whisper_cpp.rs
crates/fly-audio/: Cargo.toml
crates/fly-audio/src/: coreaudio_tap.rs  cpal_backend.rs  lib.rs  mix.rs  pulse_loopback.rs
crates/fly-calendar/src/: oauth.rs
crates/fly-core/src/: enhance.rs  lib.rs  model.rs  prompt_profile.rs  rediarize.rs  seams.rs
crates/fly-llm/src/: openai_compat.rs
crates/fly-mcp/: Cargo.toml
crates/fly-mcp/src/: context.rs  lib.rs
crates/fly-mcp/tests/: stdio.rs  stdio_lifecycle.rs
crates/fly-secrets/src/: lib.rs
crates/fly-storage/: Cargo.toml
crates/fly-storage/src/: embeddings.rs  folders.rs  hybrid.rs  items.rs  jobs.rs  lib.rs  lock_owners.rs  meetings.rs  migrations.rs  naming.rs  notes.rs  recovery.rs  search.rs  settings.rs  transcripts.rs
crates/looma-asr/: Cargo.toml
crates/looma-asr/src/: groq.rs  lib.rs  whisper_cpp.rs
crates/looma-audio/: Cargo.toml
crates/looma-audio/examples/: capture_smoke.rs
crates/looma-audio/src/: cpal_backend.rs  lib.rs  mix.rs  vad.rs  win_volume.rs
crates/looma-calendar/: Cargo.toml
crates/looma-calendar/src/: google.rs  lib.rs  msgraph.rs  oauth.rs
crates/looma-capture-screen/examples/: screen_smoke.rs
crates/looma-capture-screen/src/: ffmpeg.rs  lib.rs
crates/looma-core/src/: align.rs  crosstalk.rs  lib.rs  repeat.rs
crates/looma-diarize/: Cargo.toml
crates/looma-diarize/src/: lib.rs  sherpa.rs
crates/looma-llm/src/: anthropic.rs  lib.rs  openai_compat.rs
crates/looma-mcp/: Cargo.toml
crates/looma-mcp/src/: lib.rs  main.rs
crates/looma-mcp/tests/: stdio.rs
crates/looma-storage/src/: attachments.rs  jobs.rs  lib.rs  meetings.rs  migrations.rs  naming.rs  notes.rs  settings.rs  transcripts.rs
crates/looma-storage/tests/: migration_v2.rs
design/: Looma.dc.html  README.md
docs/: BENCHMARKS.md  MODELS.md  PARITY-REVIEW-macos-2026-07-21.md  TESTING.md  index.html
docs/data/: downloads-badge.json  stats-history.jsonl  stats.json
docs/pr-triage/: SUMMARY.md  pr-26-rehost-checklist.md
frontend/: DESIGN.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  devMock.ts  importProgress.test.ts  importProgress.ts  index.css  main.tsx  theme.ts  types.ts  updater.ts  vite-env.d.ts
frontend/src/components/: AskPanel.tsx  AttendeeEditor.tsx  DateTimePicker.tsx  Editor.tsx  EnhancedDoc.tsx  FirstRunNotice.tsx  ImportQueue.tsx  LivePane.tsx  NoteList.tsx  NotesEditor.tsx  RecordingBar.tsx  SettingsModal.tsx  Sidebar.tsx  TranscriptPanel.tsx  UpdateBanner.tsx  ui.tsx
scripts/: build-whisper-sidecar.sh  collect-stats.mjs  mcp-smoke.mjs
skills/flyonthewall-meetings/: SKILL.md
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  installer-hooks.nsi  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: asr_commands.rs  calendar_commands.rs  commands.rs  embeddings.rs  extraction.rs  gpu.rs  hw.rs  import_commands.rs  lib.rs  live.rs  llm_commands.rs  logging.rs  models.rs  ollama.rs  pipeline.rs  recording.rs  scheduler.rs  screen_commands.rs  state.rs
src-tauri/tests/: accuracy_harness.rs  enhance_flow.rs  llm_bench.rs  pipeline_e2e.rs  polish_flow.rs  rediarize_e2e.rs  scheduling.rs  scheduling_e2e.rs  search_eval.rs
