[workspace]
resolver = "2"
members = [
    "crates/fly-core",
    "crates/fly-audio",
    "crates/fly-asr",
    "crates/fly-diarize",
    "crates/fly-llm",
    "crates/fly-calendar",
    "crates/fly-capture-screen",
    "crates/fly-storage",
    "crates/fly-mcp",
    "crates/fly-secrets",
    "src-tauri",
]

[workspace.package]
version = "1.0.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/swarnavspujari/fly-on-the-wall"

[workspace.dependencies]
# internal crates
fly-core = { path = "crates/fly-core" }
fly-audio = { path = "crates/fly-audio" }
fly-asr = { path = "crates/fly-asr" }
fly-diarize = { path = "crates/fly-diarize" }
fly-llm = { path = "crates/fly-llm" }
fly-calendar = { path = "crates/fly-calendar" }
fly-capture-screen = { path = "crates/fly-capture-screen" }
fly-storage = { path = "crates/fly-storage" }
fly-secrets = { path = "crates/fly-secrets" }

# shared external deps — pinned once here so every crate agrees
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "process", "io-util", "sync", "time"] }
tracing = "0.1"
rusqlite = { version = "0.40", features = ["bundled"] }
# keyring 3.x: platform stores built in (v4 splits them into separate crates)
keyring = { version = "3", features = ["windows-native", "apple-native", "sync-secret-service"] }
dirs = "6"
reqwest = { version = "0.13", features = ["json", "form", "stream", "multipart"] }
futures-util = "0.3"
sha2 = "0.10"
cpal = "0.18"
hound = "3.5"

[profile.release]
lto = "thin"
strip = true
