[package]
name = "looma-app"
version.workspace = true
edition.workspace = true
license.workspace = true

# lib + thin main so the same code can back desktop now and mobile later
[lib]
name = "looma_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
looma-core.workspace = true
looma-audio.workspace = true
looma-asr.workspace = true
looma-diarize.workspace = true
looma-llm.workspace = true
looma-calendar.workspace = true
looma-capture-screen.workspace = true
looma-storage.workspace = true
looma-secrets.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
tokio.workspace = true
reqwest.workspace = true
futures-util.workspace = true
sha2.workspace = true
hex = "0.4"
sysinfo = "0.39"
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs.workspace = true

# Auto-update + relaunch are desktop-only plugins; keep them out of a future
# mobile build of this lib.
[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[dev-dependencies]
tempfile = "3"
