[package]
name = "fly-app"
version.workspace = true
edition.workspace = true
license.workspace = true

# lib + thin main so the same code can back desktop now and mobile later
[lib]
name = "fly_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# protocol-asset: stream local recordings into the editor's audio player.
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
fly-core.workspace = true
fly-audio.workspace = true
fly-asr.workspace = true
fly-diarize.workspace = true
fly-llm.workspace = true
fly-calendar.workspace = true
fly-capture-screen.workspace = true
fly-storage.workspace = true
fly-secrets.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
tokio.workspace = true
reqwest.workspace = true
futures-util.workspace = true
sha2.workspace = true
zip.workspace = true
tar.workspace = true
bzip2.workspace = true
xz2.workspace = true
hex = "0.4"
sysinfo = "0.39"
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs.workspace = true
tauri-plugin-clipboard-manager = "2"

# Auto-update + relaunch + single-instance are desktop-only plugins; keep them
# out of a future mobile build of this lib.
[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"

[dev-dependencies]
tempfile = "3"
async-trait.workspace = true
