[package]
name = "fly-asr"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
fly-audio.workspace = true
fly-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
tokio.workspace = true
reqwest.workspace = true
uuid.workspace = true
hound.workspace = true

[dev-dependencies]
tempfile = "3"
