[package]
name = "fly-audio"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
fly-core.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
cpal.workspace = true
hound.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_Media_Audio",
  "Win32_Media_Audio_Endpoints",
  "Win32_System_Com",
] }

[target.'cfg(target_os = "macos")'.dependencies]
# System-audio loopback: Core Audio process taps (macOS 14.2+, gated at
# runtime). All of these are already in the dependency graph via tauri/cpal.
objc2 = "0.6"
objc2-core-audio = "0.3"
objc2-core-audio-types = "0.3"
objc2-core-foundation = { version = "0.3", default-features = false, features = [
  "CFDictionary",
] }
objc2-foundation = { version = "0.3", default-features = false, features = [
  "NSArray",
  "NSString",
  "NSUUID",
  "std",
] }
block2 = "0.6"
dispatch2 = "0.3"
core-foundation = "0.10"

[target.'cfg(target_os = "linux")'.dependencies]
# System-audio loopback: record the default sink's monitor source. Works on
# PulseAudio and PipeWire (via pipewire-pulse) alike.
libpulse-binding = "2"
libpulse-simple-binding = "2"

[dev-dependencies]
tempfile = "3"
