[package]
name = "looma-asr"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
looma-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
tokio.workspace = true
reqwest.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
