[package]
name = "looma-calendar"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
looma-core.workspace = true
looma-secrets.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
chrono.workspace = true
reqwest.workspace = true
tokio.workspace = true
sha2.workspace = true
uuid.workspace = true
base64 = "0.22"
urlencoding = "2"
