[package]
name = "looma-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "looma-mcp"
path = "src/main.rs"

[dependencies]
looma-core.workspace = true
looma-storage.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile = "3" 
